--- a/current-members/index.html
+++ b/current-members/index.html
@@ -16,7 +16,7 @@ description:
 
           <div class="horizontal-slider__slide">
 
-                          <img src="../assets/img/2016.jpg"  alt="">
+                          <img src="{{ site.url }}/assets/img/2016.jpg"  alt="">
 
           </div>
 
