--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ description:
               <div class="vertical__slide">
 
 <section class="slide-cards slide-section slide-section--cards"
-         style="background-image: url('../assets/img/news.jpg'); background-color: #ec9533;">
+         style="background-image: url('{{ site.url }}/assets/img/news.jpg'); background-color: #ec9533;">
 
   <div class="heading">
 
