--- a/zwyuan/index.html
+++ b/zwyuan/index.html
@@ -9,8 +9,8 @@ description:
   <div class="faded-image__main-container">
     <div class="faded-image__main-image">
               <picture>
-          <source srcset="../assets/img/bio_bg.jpg" media="(max-width: 39.9375em)" />
-          <img src="../assets/img/bio_bg.jpg" alt="" />
+          <source srcset="{{ site.url }}/assets/img/bio_bg.jpg" media="(max-width: 39.9375em)" />
+          <img src="{{ site.url }}/assets/img/bio_bg.jpg" alt="" />
         </picture>
           </div>
     <div class="faded-image__overlay" >
