--- a/publications/index.html
+++ b/publications/index.html
@@ -7,7 +7,7 @@ description:
 <main class="main main--interior">
 
 <section class="hero-parallax js-parallax"
-         style="background-image: url('../assets/img/Publications_Page.jpg');">
+         style="background-image: url('{{ site.url }}/assets/img/Publications_Page.jpg');">
 
   <div class="hero-parallax__content">
           <h1 class="hero-parallax__title hero-parallax__title--white">
