--- a/publications/index.html
+++ b/publications/index.html
@@ -98,7 +98,7 @@ description:
                 </div>
                 <div class="publication__graphics-wrap clearfix">
                   <div class="publication__graphics">
-                                          <img src="{{post.content_img}}"
+                                          <img src="{{site.url}}/assets/img/{{post.content_img}}"
                            alt="" />
                                       </div>
                 </div>
@@ -163,7 +163,7 @@ description:
                 </div>
                 <div class="publication__graphics-wrap clearfix">
                   <div class="publication__graphics">
-                                          <img src="{{post.content_img}}"
+                                          <img src="{{site.url}}/assets/img/{{post.content_img}}"
                            alt="" />
                                       </div>
                 </div>
