--- a/current-members/index.html
+++ b/current-members/index.html
@@ -69,9 +69,9 @@ description:
               <div class="members__item-wrap">
 
                   <div class="members__item-icon">
-                    <img width="255" height="255" src="{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{post.img}} 255w, {{post.img}} 150w, {{post.img}} 125w, {{post.img}} 720w, {{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
+                    <img width="255" height="255" src="{{site.url}}/assets/img/{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{site.url}}/assets/img/{{post.img}} 255w, {{site.url}}/assets/img/{{post.img}} 150w, {{site.url}}/assets/img/{{post.img}} 125w, {{site.url}}/assets/img/{{post.img}} 720w, {{site.url}}/assets/img/{{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
 
-                  <img src="{{post.flag_img}}"
+                  <img src="{{site.url}}/assets/img/{{post.flag_img}}"
                        alt=""
                        class="members__item-flag"/>
 
@@ -102,9 +102,9 @@ description:
             <div class="members__item-wrap">
 
                 <div class="members__item-icon">
-                  <img width="255" height="255" src="{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{post.img}} 255w, {{post.img}} 150w, {{post.img}} 125w, {{post.img}} 720w, {{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
+                  <img width="255" height="255" src="{{site.url}}/assets/img/{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{site.url}}/assets/img/{{post.img}} 255w, {{site.url}}/assets/img/{{post.img}} 150w, {{site.url}}/assets/img/{{post.img}} 125w, {{site.url}}/assets/img/{{post.img}} 720w, {{site.url}}/assets/img/{{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
 
-                <img src="{{post.flag_img}}"
+                <img src="{{site.url}}/assets/img/{{post.flag_img}}"
                      alt=""
                      class="members__item-flag"/>
 
@@ -135,9 +135,9 @@ description:
             <div class="members__item-wrap">
 
                 <div class="members__item-icon">
-                  <img width="255" height="255" src="{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{post.img}} 255w, {{post.img}} 150w, {{post.img}} 125w, {{post.img}} 720w, {{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
+                  <img width="255" height="255" src="{{site.url}}/assets/img/{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{site.url}}/assets/img/{{post.img}} 255w, {{site.url}}/assets/img/{{post.img}} 150w, {{site.url}}/assets/img/{{post.img}} 125w, {{site.url}}/assets/img/{{post.img}} 720w, {{site.url}}/assets/img/{{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
 
-                <img src="{{post.flag_img}}"
+                <img src="{{site.url}}/assets/img/{{post.flag_img}}"
                      alt=""
                      class="members__item-flag"/>
 
@@ -168,9 +168,9 @@ description:
             <div class="members__item-wrap">
 
                 <div class="members__item-icon">
-                  <img width="255" height="255" src="{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{post.img}} 255w, {{post.img}} 150w, {{post.img}} 125w, {{post.img}} 720w, {{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
+                  <img width="255" height="255" src="{{site.url}}/assets/img/{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{site.url}}/assets/img/{{post.img}} 255w, {{site.url}}/assets/img/{{post.img}} 150w, {{site.url}}/assets/img/{{post.img}} 125w, {{site.url}}/assets/img/{{post.img}} 720w, {{site.url}}/assets/img/{{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
 
-                <img src="{{post.flag_img}}"
+                <img src="{{site.url}}/assets/img/{{post.flag_img}}"
                      alt=""
                      class="members__item-flag"/>
 
@@ -201,9 +201,9 @@ description:
             <div class="members__item-wrap">
 
                 <div class="members__item-icon">
-                  <img width="255" height="255" src="{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{post.img}} 255w, {{post.img}} 150w, {{post.img}} 125w, {{post.img}} 720w, {{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
+                  <img width="255" height="255" src="{{site.url}}/assets/img/{{post.img}}" class="attachment-members-photo size-members-photo wp-post-image" alt="" srcset="{{site.url}}/assets/img/{{post.img}} 255w, {{site.url}}/assets/img/{{post.img}} 150w, {{site.url}}/assets/img/{{post.img}} 125w, {{site.url}}/assets/img/{{post.img}} 720w, {{site.url}}/assets/img/{{post.img}} 339w" sizes="(max-width: 255px) 100vw, 255px" />                  </div>
 
-                <img src="{{post.flag_img}}"
+                <img src="{{site.url}}/assets/img/{{post.flag_img}}"
                      alt=""
                      class="members__item-flag"/>
 
