--- a/social-media/index.html
+++ b/social-media/index.html
@@ -85,7 +85,7 @@ description:
     </div>
         <!--百度地图容器-->
 
-      <script src="{{ "{{ site.url }}/assets/js/ditu.js" | prepend: site.baseurl }}"></script>
+      <script src="{{ site.url }}/assets/js/ditu.js"></script>
 
 
 
