--- a/presentations/index.html
+++ b/presentations/index.html
@@ -69,7 +69,7 @@ description:
 
                     <h3 class="presentation__title">{{post.title}}</h3>
 
-                                          <a class="presentation__author presentation__author--link" href="../member/dr-dominik-koelmel/index.html">
+                                          <a class="presentation__author presentation__author--link" href="{{site.url}}/{{post.author_url}}">
                         {{post.author}} <span class="arrow-rotate">
                           <svg>
                             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use>
