--- a/zwyuan/scientific-consultant/index.html
+++ b/zwyuan/scientific-consultant/index.html
@@ -1,15 +1,15 @@
 ---
-title: Scientific Consultant
+title: 学术兼职
 layout: page
-description: 
+description:
 ---
 
 
 <main class="main main--interior">
-  
+
 <section class="heading-background">
   <div class="heading-background__wrap">
-          <h2 class="heading-background__heading">Scientific  Consultant</h2>
+          <h2 class="heading-background__heading">学术兼职</h2>
           </div>
 </section>
 
@@ -18,54 +18,36 @@ description:
     <ul class="timeline__item-list">
 
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2016-Present</time>
+          <time>2015-现今</time>
           <div>
-            <span>Takeda, Japan</span>
+            <span>中国环境科学学会生态产业分会，副主任委员</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2015-Present</time>
+          <time>2015-现今</time>
           <div>
-            <span>Biogen, MA</span>
+            <span>中国生态学会第八届青年工作委员会，副主任委员</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2003-Present</time>
+          <time>2008-现今</time>
           <div>
-            <span>Gilead Pharmaceuticals, CA</span>
+            <span>中国环境科学学会环境规划专业委员会，常委会委员</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2002-Present</time>
+          <time>2008-现今</time>
           <div>
-            <span>Amgen Pharmaceuticals, (worldwide)</span>
+            <span>中国生态经济学会工业生态经济与技术专业委员会，常务理事</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001-Present</time>
+          <time>2008-现今</time>
           <div>
-            <span>Merck Research Laboratories (worldwide)</span>
+            <span>中国环境科学学会环境经济学分会，委员</span>
           </div>
         </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001-Present</time>
-          <div>
-            <span>Bayer Pharmaceuticals, CT</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2000-Present</time>
-          <div>
-            <span>Johnson & Johnson, CA, NJ</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2000-Present</time>
-          <div>
-            <span>AbbVie, Il</span>
-          </div>
-        </li>
-      
+
       <li class="timeline__connect js-timeline-connect"></li>
 
     </ul>
@@ -76,21 +58,21 @@ description:
   <div class="wrapper">
 
     <a class="btn  btn--pagination btn--pagination-left"
-        href="../editorial-advisory-board/index.html"
+        href="../awards-honors/index.html"
                 title="Editorial  Advisory Board">
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
-      <span>Editorial  Advisory Board</span>
+      <span>获奖与荣誉</span>
     </a>
 
     <a class="btn btn--pagination"
         href="../index.html"
         title="Back">
-      <span>Back</span>
+      <span>返回</span>
     </a>
     <a class="btn  btn--pagination btn--pagination-right"
         href="../invited-talks/index.html"
                 title="Invited Talks">
-      <span>Invited Talks</span>
+      <span>受邀讲座</span>
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
     </a>
 
