--- a/zwyuan/awards-honors/index.html
+++ b/zwyuan/awards-honors/index.html
@@ -1,13 +1,13 @@
 ---
-title: Awards &amp; Honors
+title: 获奖与荣誉
 layout: page
-description: 
+description:
 ---
 <main class="main main--interior">
-  
+
 <section class="heading-background">
   <div class="heading-background__wrap">
-          <h2 class="heading-background__heading">Awards  & Honors</h2>
+          <h2 class="heading-background__heading">获奖与荣誉</h2>
           </div>
 </section>
 
@@ -16,144 +16,60 @@ description:
     <ul class="timeline__item-list">
 
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2015</time>
+          <time>2013</time>
           <div>
-            <span>Ernst Schering Prize</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2014</time>
-          <div>
-            <span>Harrison Howe Award</span>
+            <span>江苏省333工程中青年科学技术带头人</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
           <time>2012</time>
           <div>
-            <span>Elected Fellow of the Royal Society</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2012</time>
-          <div>
-            <span>Elected member of the American Academy of Arts and Sciences</span>
+            <span>国家优秀青年科学基金</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
           <time>2011</time>
           <div>
-            <span>ACS Award for Creative Work in Synthetic Organic Chemistry</span>
+            <span>教育部新世纪优秀人才支持计划</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2007</time>
+          <time>2010</time>
           <div>
-            <span>Mukaiyama Award</span>
+            <span>南京大学“中国银行奖教金”（首届）</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2007</time>
+          <time>2010</time>
           <div>
-            <span>ISHC Award in Heterocyclic Chemistry</span>
+            <span>中国环境科学学会“青年科技奖”</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2007</time>
+          <time>2010</time>
           <div>
-            <span>ACS Cope Scholar Award</span>
+            <span>江苏省科学技术进步二等奖</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2006</time>
+          <time>2009</time>
           <div>
-            <span>Thieme-IUPAC Prize in Organic Synthesis</span>
+            <span>南京大学优秀中青年学科带头人</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2005</time>
+          <time>2009</time>
           <div>
-            <span>Elias J. Corey Award for Outstanding Contribution in Organic Synthesis by a Young Investigator</span>
+            <span>教育部科技进步二等奖</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2005</time>
+          <time>2008</time>
           <div>
-            <span>Tetrahderon Young Investigator Award</span>
+            <span>南京大学优秀青年骨干教师</span>
           </div>
         </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2005</time>
-          <div>
-            <span>Corday-Morgan Medal</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2003</time>
-          <div>
-            <span>Camille and Henry Dreyfus Teacher-Scholar Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2002</time>
-          <div>
-            <span>Sloan Fellowship</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2002</time>
-          <div>
-            <span>Bristol-Meyers Squibb Award for Organic Synthesis</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2002</time>
-          <div>
-            <span>Pfizer Award for Excellence in Synthesis</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Eli-Lilly Grantee Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Glaxo Smithkline Chemistry Scholar Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Eli-Lilly New Investigator Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Astra-Zeneca Excellence in Chemistry Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Cottrell Scholar Award</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2001</time>
-          <div>
-            <span>Woodward Scholarship Award from Harvard</span>
-          </div>
-        </li>
-              <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>2000</time>
-          <div>
-            <span>Boehringer-Ingelheim New Investigator Award</span>
-          </div>
-        </li>
-      
+
       <li class="timeline__connect js-timeline-connect"></li>
 
     </ul>
@@ -167,18 +83,18 @@ description:
         href="../career/index.html"
                 title="Career">
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
-      <span>Career</span>
+      <span>学习工作经历</span>
     </a>
 
     <a class="btn btn--pagination"
         href="../index.html"
         title="Back">
-      <span>Back</span>
+      <span>返回</span>
     </a>
     <a class="btn  btn--pagination btn--pagination-right"
-        href="../scientific-advisory-board/index.html"
-                title="Scientific  Advisory Board">
-      <span>Scientific  Advisory Board</span>
+        href="../scientific-consultant/index.html"
+                title="scientific consultant">
+      <span>学术兼职</span>
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
     </a>
 
