--- a/zwyuan/career/index.html
+++ b/zwyuan/career/index.html
@@ -1,14 +1,14 @@
 ---
-title: Career
+title: 学习工作经历
 layout: page
-description: 
+description:
 ---
 
 <main class="main main--interior">
-  
+
 <section class="heading-background">
   <div class="heading-background__wrap">
-          <h2 class="heading-background__heading">Career</h2>
+          <h2 class="heading-background__heading">学习工作经历</h2>
           </div>
 </section>
 
@@ -17,66 +17,72 @@ description:
     <ul class="timeline__item-list">
 
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>August 2011</time>
+          <time>2012.06-现今</time>
           <div>
-            <span>Appointed as James S. McDonnell Distinguished University Professor of Chemistry at Princeton University.</span>
+            <span>南京大学环境学院，教授、博士生导师</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>July 2010</time>
+          <time>2013.10-2013.11</time>
           <div>
-            <span>Appointed as Chairperson of the Department of Chemistry at Princeton University.</span>
+            <span>爱尔兰国立大学地理与考古学院地理信息系统中心，访问学者</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>July 2006</time>
+          <time>2011.12-2012.05</time>
           <div>
-            <span>Appointed as Director of the Merck Center for Catalysis at Princeton University.</span>
+            <span>南京大学环境学院，教授</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>June 2006</time>
+          <time>2011.01-2011.12</time>
           <div>
-            <span>Appointed as the A. Barton Hepburn Professor of Chemistry at Princeton University.</span>
+            <span>斯坦福大学市政与环境工程系，访问学者</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>Sept 2004</time>
+          <time>2007.09-2008.09</time>
           <div>
-            <span>Appointed as Earle C. Anthony Professor of Chemistry at California Institute of Technology.</span>
+            <span>南京大学人文社会科学高级研究院，研究学者</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>June 2000</time>
+          <time>2006.12-2011.12</time>
           <div>
-            <span>Joined the department of chemistry at the California Institute of Technology.</span>
+            <span>南京大学环境学院，副教授</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>July 1998</time>
+          <time>2005.03-2005.07</time>
           <div>
-            <span>Dave began his independent research career at the University of California, Berkeley.</span>
+            <span>耶鲁大学林业与环境学院产业生态学研究中心，博士后</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>1996-1998</time>
+          <time>2005.01-2006.12</time>
           <div>
-            <span>Postdoctoral research fellow with Professor David A. Evans at Harvard University.</span>
+            <span>清华大学环境科学与工程系，博士后</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>1991-1996</time>
+          <time>2002.03-2005.01</time>
           <div>
-            <span>Doctoral studies with Professor Larry E. Overman at the University of California, Irvine.</span>
+            <span>就读于南京大学环境学院环境科学系，获理学博士学位</span>
           </div>
         </li>
               <li class="timeline__item transparent js-animate-fadeInOnScroll">
-          <time>1987-1991</time>
+          <time>1999.09-2002.03</time>
           <div>
-            <span>Undergraduate degree in chemistry at the University of Glasgow.</span>
+            <span>就读于广东工业大学资源与环境工程系，获工学硕士学位</span>
           </div>
         </li>
-      
+              <li class="timeline__item transparent js-animate-fadeInOnScroll">
+          <time>1995.09-1999.07</time>
+          <div>
+            <span>就读于中南工业大学矿物工程系，获工学学士学位</span>
+          </div>
+        </li>
+
       <li class="timeline__connect js-timeline-connect"></li>
 
     </ul>
@@ -90,18 +96,18 @@ description:
         href="../invited-talks/index.html"
          target="_blank"        title="Invited Talks">
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
-      <span>Invited Talks</span>
+      <span>受邀讲座</span>
     </a>
 
     <a class="btn btn--pagination"
         href="../index.html"
         title="Back">
-      <span>Back</span>
+      <span>返回</span>
     </a>
     <a class="btn  btn--pagination btn--pagination-right"
         href="../awards-honors/index.html"
-                title="Awards & Honors">
-      <span>Awards & Honors</span>
+                title="获奖与荣誉">
+      <span>获奖与荣誉</span>
       <span class="arrow-rotate"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#arrow-left"></use></svg></span>
     </a>
 
@@ -109,4 +115,3 @@ description:
 </section>
 
 </main>
-
