--- a/zwyuan/index.html
+++ b/zwyuan/index.html
@@ -32,7 +32,7 @@ description:
     <ul>
               <li>
           <div class="scientific-achievements__content-item transparent js-animate-fadeInOnScroll">
-            <h3>工作经历</h3>
+            <h3>学习工作经历</h3>
 
                 <a class="btn  btn--grey"
               href="career/index.html"
@@ -54,33 +54,10 @@ description:
 
             </div>
         </li>
+
               <li>
           <div class="scientific-achievements__content-item transparent js-animate-fadeInOnScroll">
-            <h3>Scientific  Advisory Board</h3>
-
-                <a class="btn  btn--grey"
-              href="scientific-advisory-board/index.html"
-                            title="View">
-            <span>View</span>
-          </a>
-
-            </div>
-        </li>
-              <li>
-          <div class="scientific-achievements__content-item transparent js-animate-fadeInOnScroll">
-            <h3>Editorial  Advisory Board</h3>
-
-                <a class="btn  btn--grey"
-              href="editorial-advisory-board/index.html"
-                            title="View">
-            <span>View</span>
-          </a>
-
-            </div>
-        </li>
-              <li>
-          <div class="scientific-achievements__content-item transparent js-animate-fadeInOnScroll">
-            <h3>Scientific  Consultant</h3>
+            <h3>学术兼职</h3>
 
                 <a class="btn  btn--grey"
               href="scientific-consultant/index.html"
@@ -92,7 +69,7 @@ description:
         </li>
               <li>
           <div class="scientific-achievements__content-item transparent js-animate-fadeInOnScroll">
-            <h3>Invited Talks</h3>
+            <h3>受邀讲座</h3>
 
                 <a class="btn  btn--grey"
               href="invited-talks/index.html"
@@ -110,15 +87,11 @@ description:
     <svg class="transparent js-animate-fadeInOnScroll">
       <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-speachbox"></use>
     </svg>
-    <h2 class="transparent js-animate-fadeInOnScroll">Eminent Organic  Chemists Collection</h2>
+    <h2 class="transparent js-animate-fadeInOnScroll">物质循环及其资源环境效应</h2>
     <div class="divider divider--achivments transparent js-animate-fadeInOnScroll"><span></span></div>
-    <p class="transparent js-animate-fadeInOnScroll">A collection of interviews with Dave by  the American Chemical Society's Division  of Organic Chemistry</p>
+    <p class="transparent js-animate-fadeInOnScroll">旨在阐释P/N等营养物质的生物地球化学过程机理和多尺度时空格局演变规律，研发含磷废物（畜禽粪便、餐余垃圾等）资源化技术，并定量评估P/N循环生命周期过程的资源环境效应，为P/N可持续利用提供决策依据。</p>
 
-                <a class="btn  btn--white transparent js-animate-fadeInOnScroll"
-              href="https://www.organicdivision.org/organicchemistvideos"
-               target="_blank"              title="Check it out">
-            <span>Check it out</span>
-          </a>
+
 
     </div>
 
