--- a/current-members/index.html
+++ b/current-members/index.html
@@ -64,7 +64,7 @@ description:
 
 
         <ul class="members__category-container">
-{% for post in site.posts %}{% if post.class == 'team' %}{% if post.identify == 'teacher' %}
+{% for post in site.posts %}{% if post.classification == 'team' %}{% if post.identify == 'teacher' %}
                       <li class="members__item transparent js-animate-fadeInOnScroll">
               <div class="members__item-wrap">
 
@@ -97,7 +97,7 @@ description:
 
 
       <ul class="members__category-container">
-{% for post in site.posts %}{% if post.class == 'team' %}{% if post.identify == 'doctor' %}
+{% for post in site.posts %}{% if post.classification == 'team' %}{% if post.identify == 'doctor' %}
                     <li class="members__item transparent js-animate-fadeInOnScroll">
             <div class="members__item-wrap">
 
@@ -130,7 +130,7 @@ description:
 
 
       <ul class="members__category-container">
-{% for post in site.posts %}{% if post.class == 'team' %}{% if post.identify == 'master' %}
+{% for post in site.posts %}{% if post.classification == 'team' %}{% if post.identify == 'master' %}
                     <li class="members__item transparent js-animate-fadeInOnScroll">
             <div class="members__item-wrap">
 
@@ -163,7 +163,7 @@ description:
 
 
       <ul class="members__category-container">
-{% for post in site.posts %}{% if post.class == 'team' %}{% if post.identify == 'undergraduate' %}
+{% for post in site.posts %}{% if post.classification == 'team' %}{% if post.identify == 'undergraduate' %}
                     <li class="members__item transparent js-animate-fadeInOnScroll">
             <div class="members__item-wrap">
 
@@ -196,7 +196,7 @@ description:
 
 
       <ul class="members__category-container">
-{% for post in site.posts %}{% if post.class == 'team' %}{% if post.identify == 'visits' %}
+{% for post in site.posts %}{% if post.classification == 'team' %}{% if post.identify == 'visits' %}
                     <li class="members__item transparent js-animate-fadeInOnScroll">
             <div class="members__item-wrap">
 
