--- a/current-members/index.html
+++ b/current-members/index.html
@@ -78,7 +78,7 @@ description:
                               </div>
               <h3>{{post.title}}</h3>
 
-                              <a href="{{post.url}}">view bio</a>
+                              <a href="{{post.url| prepend: site.baseurl}}">view bio</a>
 
             </li>
 {% endif %}{% endif %}{% endfor %}
@@ -111,7 +111,7 @@ description:
                             </div>
             <h3>{{post.title}}</h3>
 
-                            <a href="{{post.url}}">view bio</a>
+                            <a href="{{post.url| prepend: site.baseurl}}">view bio</a>
 
           </li>
 {% endif %}{% endif %}{% endfor %}
@@ -144,7 +144,7 @@ description:
                             </div>
             <h3>{{post.title}}</h3>
 
-                            <a href="{{post.url}}">view bio</a>
+                            <a href="{{post.url| prepend: site.baseurl}}">view bio</a>
 
           </li>
 {% endif %}{% endif %}{% endfor %}
@@ -177,7 +177,7 @@ description:
                             </div>
             <h3>{{post.title}}</h3>
 
-                            <a href="{{post.url}}">view bio</a>
+                            <a href="{{post.url| prepend: site.baseurl}}">view bio</a>
 
           </li>
 {% endif %}{% endif %}{% endfor %}
@@ -210,7 +210,7 @@ description:
                             </div>
             <h3>{{post.title}}</h3>
 
-                            <a href="{{post.url}}">view bio</a>
+                            <a href="{{post.url| prepend: site.baseurl}}">view bio</a>
 
           </li>
 {% endif %}{% endif %}{% endfor %}
