--- a/publications/index.html
+++ b/publications/index.html
@@ -79,7 +79,7 @@ description:
                   </a>
                 </div>
                                       <div class="publication__linked-box">
-                      <a class="publication__link" href="{{post.url}}">More</a>
+                      <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                     </div>
                                 </header>
 
@@ -144,7 +144,7 @@ description:
                   </a>
                 </div>
                                       <div class="publication__linked-box">
-                      <a class="publication__link" href="{{post.url}}">More</a>
+                      <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                     </div>
                                 </header>
 
@@ -206,7 +206,7 @@ description:
                     </a>
                   </div>
                                         <div class="publication__linked-box">
-                        <a class="publication__link" href="{{post.url}}">More</a>
+                        <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                       </div>
                                   </header>
 
@@ -270,7 +270,7 @@ description:
                       </a>
                     </div>
                                           <div class="publication__linked-box">
-                          <a class="publication__link" href="{{post.url}}">More</a>
+                          <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                         </div>
                                     </header>
 
@@ -333,7 +333,7 @@ description:
                         </a>
                       </div>
                                             <div class="publication__linked-box">
-                            <a class="publication__link" href="{{post.url}}">More</a>
+                            <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                           </div>
                                       </header>
 
@@ -397,7 +397,7 @@ description:
                           </a>
                         </div>
                                               <div class="publication__linked-box">
-                              <a class="publication__link" href="{{post.url}}">More</a>
+                              <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                             </div>
                                         </header>
 
@@ -461,7 +461,7 @@ description:
                             </a>
                           </div>
                                                 <div class="publication__linked-box">
-                                <a class="publication__link" href="{{post.url}}">More</a>
+                                <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                               </div>
                                           </header>
 
@@ -525,7 +525,7 @@ description:
                               </a>
                             </div>
                                                   <div class="publication__linked-box">
-                                  <a class="publication__link" href="{{post.url}}">More</a>
+                                  <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                                 </div>
                                             </header>
 
@@ -592,7 +592,7 @@ description:
                     </a>
                   </div>
                                         <div class="publication__linked-box">
-                        <a class="publication__link" href="{{post.url}}">More</a>
+                        <a class="publication__link" href="{{post.url| prepend: site.baseurl}}">More</a>
                       </div>
                                   </header>
 
@@ -644,7 +644,7 @@ description:
 {% for post in site.posts %}{% if post.classification == 'publications_book' %}
           <li class="numbered-list__list-item" >
             <div class="numbered-list__content" data-list-number="{{post.number}}" >
-              <a href="{{post.url}}" style="color: black; text-decoration:none;">{{post.author}}. {{post.title}}[M]. {{post.press_loc}}: {{post.press}}, {{post.year}}.</a></div>
+              <a href="{{post.url| prepend: site.baseurl}}" style="color: black; text-decoration:none;">{{post.author}}. {{post.title}}[M]. {{post.press_loc}}: {{post.press}}, {{post.year}}.</a></div>
           </li>
 {% endif %}{% endfor %}
     </ul>
